# TIPE

./: .gitignore  Fonction.md  README.md  TIPE.opam  documentation.md  documentation.temp  dune-project  dune-workspace  game.json  ma_merde.ml  map.json  map1.json  test_gen.json  utop  village.json
.pandoc/: compile_readme.bash  header.md
docs/: documentation.aux  documentation.fdb_latexmk  documentation.fls  documentation.tex  documentation.toc  pdflatex65302.fls
docs/_minted-documentation/: 6FCD25C77DAF67F9073192924F3D7706251286BADFA46D28FF405301F2E493A4.pygtex  8E3AECA7871525DCB8E31E08815CC11B251286BADFA46D28FF405301F2E493A4.pygtex
jupyter/: visualization.ipynb  visualization.py
jupyter/.ipynb_checkpoints/: visualization-checkpoint.ipynb
lib/: decision.ml  dumpmap.ml  dune  game.ml  generation.ml  interpolation.ml  map.ml  mapgen.ml  mapmanage.ml  mutation.ml  newgen.ml  score.ml  tour.ml  utils.ml  village.ml
