(library
 (name utils)
 (modules utils))

(library
 (name mapgen)
 (modules mapgen))

(library
 (name village)
 (modules village)
 (libraries mapgen mapmanage))

(library
 (name decision)
 (modules decision)
 (libraries mapgen mapmanage village utils))

(library
 (name dumpmap)
 (modules dumpmap)
 (libraries mapgen mapmanage yojson))

(library
 (name mapmanage)
 (modules mapmanage)
 (libraries mapgen))
