(library
 (name utils)
 (modules utils))

(library
 (name mapgen)
 (modules mapgen )
 (libraries domainslib))

(library
 (name village)
 (modules village)
 (libraries mapgen mapmanage))

(library
 (name decision)
 (modules decision)
 (libraries mapgen mapmanage village utils))

(library
 (name game)
 (modules game)
 (libraries village mapgen newgen))

(library
 (name dumpmap)
 (modules dumpmap)
 (libraries mapgen mapmanage yojson village game))

(library
 (name mapmanage)
 (modules mapmanage)
 (libraries mapgen))

(library
 (name newgen)
 (modules newgen)
 (libraries village))
