(library
 (name utils)
 (modules utils))

(library
 (name mapgen)
 (modules mapgen)
 (libraries utils domainslib))

(library
 (name village)
 (modules village)
 (libraries mapgen mapmanage))

(library
 (name decision)
 (modules decision)
 (libraries mapgen mapmanage village utils))

(library
 (name score)
 (modules score)
 (libraries village mapgen))

(library
 (name game)
 (modules game)
 (libraries village mapgen newgen score yojson dumpmap decision))

(library
 (name dumpmap)
 (modules dumpmap)
 (libraries mapgen mapmanage yojson village newgen))

(library
 (name mapmanage)
 (modules mapmanage)
 (libraries mapgen))

(library
 (name newgen)
 (modules newgen)
 (libraries village))

(library
 (name mutation)
 (modules mutation)
 (libraries village utils mapgen))
